--- a/config.json
+++ b/config.json
@@ -1,11 +1,15 @@
 {
   "human": {
     "tax": "9606",
-    "download": "https://data.fanta.bio/cre/v1.1.0/human/human-CREv1.1.0.hg38.cre-peaks_annotation.jsonl.gz"
+    "assembly": "GRCh38",
+    "bed": "https://data.fanta.bio/cre/v1.1.0/human/human-CREv1.1.0.hg38.cre-peaks.bed.gz",
+    "jsonl": "https://data.fanta.bio/cre/v1.1.0/human/human-CREv1.1.0.hg38.cre-peaks_annotation.jsonl.gz"
   },
   "mouse": {
     "tax": "10090",
-    "download": "https://data.fanta.bio/cre/v1.1.0/mouse/mouse-CREv1.1.0.mm10.cre-peaks_annotation.jsonl.gz"
+    "assembly": "GRCm38",
+    "bed": "https://data.fanta.bio/cre/v1.1.0/mouse/mouse-CREv1.1.0.mm10.cre-peaks.bed.gz",
+    "jsonl": "https://data.fanta.bio/cre/v1.1.0/mouse/mouse-CREv1.1.0.mm10.cre-peaks_annotation.jsonl.gz"
   },
   "sparql_endpoint": "https://rdfportal.org/ncbi/sparql"
 }
