--- a/config.json
+++ b/config.json
@@ -3,15 +3,15 @@
     "tax": "9606",
     "assembly": "GRCh38",
     "chro": "hco",
-    "bed": "https://data.fanta.bio/cre/v1.1.0/human/human-CREv1.1.0.hg38.cre-peaks.bed.gz",
-    "jsonl": "https://data.fanta.bio/cre/v1.1.0/human/human-CREv1.1.0.hg38.cre-peaks_annotation.jsonl.gz"
+    "bed": "https://data.fanta.bio/cre/v1.2.0/human/human-CREv1.2.0.hg38.cre-peaks.tpm.txt.gz",
+    "jsonl": "https://data.fanta.bio/cre/v1.2.0/human/human-CREv1.2.0.hg38.cre-peaks_annotation.jsonl.gz"
   },
   "mouse": {
     "tax": "10090",
     "assembly": "GRCm38",
     "chro": "mco",
-    "bed": "https://data.fanta.bio/cre/v1.1.0/mouse/mouse-CREv1.1.0.mm10.cre-peaks.bed.gz",
-    "jsonl": "https://data.fanta.bio/cre/v1.1.0/mouse/mouse-CREv1.1.0.mm10.cre-peaks_annotation.jsonl.gz"
+    "bed": "https://data.fanta.bio/cre/v1.2.0/mouse/mouse-CREv1.2.0.mm10.cre-peaks.bed.gz",
+    "jsonl": "https://data.fanta.bio/cre/v1.2.0/mouse/mouse-CREv1.2.0.mm10.cre-peaks_annotation.jsonl.gz"
   },
   "sparql_endpoint": "https://rdfportal.org/ncbi/sparql"
 }
